==> STMicroelectronics/STM32CubeC5/examples/middleware/freertos/low_power/NUCLEO-C562RE/generated/hal/mx_pwr.c <==
/**
  ******************************************************************************
  * @file           : mx_pwr.c
  * @brief          : PWR Peripheral initialization
  ******************************************************************************
  * @attention
  *
  * Copyright (c) 2026 STMicroelectronics.
  * All rights reserved.
  *
  * This software is licensed under terms that can be found in the mx_stm32c5xx_hal_drivers_license.md file
  * in the same directory as the generated code.
  * If no mx_stm32c5xx_hal_drivers_license.md file comes with this software, it is provided AS-IS.
  *
  ******************************************************************************
  */

/* Includes ------------------------------------------------------------------*/
#include "mx_pwr.h"
#include "mx_rcc.h"
/* Private typedef -----------------------------------------------------------*/
/* Private define ------------------------------------------------------------*/
/* Private macros ------------------------------------------------------------*/
/* Private variables ---------------------------------------------------------*/
/* Private functions prototype------------------------------------------------*/

/******************************************************************************/
/* Exported functions for PWR in HAL layer (SW instance PWR) */
/******************************************************************************/

system_status_t mx_pwr_init(void)
{
  return SYSTEM_OK;
}

system_status_t mx_pwr_deinit(void)
{
  return SYSTEM_OK;
}

/******************************************************************************/
/* Runtime APIs                                                               */
/******************************************************************************/
system_status_t mx_pwr_enter_low_power(void)
{
  /* Clear both standby and stop flags */
  HAL_PWR_CleanPreviousSystemPowerMode();

  /* Enter the MCU in stop mode */
  HAL_PWR_EnterStopMode(HAL_PWR_LOW_PWR_MODE_WFI, HAL_PWR_STOP1_MODE);

  return SYSTEM_OK;
}

system_status_t mx_pwr_exit_low_power(void)
{
  /* This API is the runtime API generated by RCC module */
  return (mx_rcc_init());
}
