==> STMicroelectronics/STM32CubeC5/examples/ll/dac/sample_and_hold/NUCLEO-C5A3ZG/generated/hal/mx_pwr.c <==
/**
  ******************************************************************************
  * @file           : mx_pwr.c
  * @brief          : PWR Peripheral initialization
  ******************************************************************************
  * @attention
  *
  * Copyright (c) 2026 STMicroelectronics.
  * All rights reserved.
  *
  * This software is licensed under terms that can be found in the mx_stm32c5xx_hal_drivers_license.md file
  * in the same directory as the generated code.
  * If no mx_stm32c5xx_hal_drivers_license.md file comes with this software, it is provided AS-IS.
  *
  ******************************************************************************
  */

/* Includes ------------------------------------------------------------------*/
#include "mx_pwr.h"
#include "mx_rcc.h"
/* Private typedef -----------------------------------------------------------*/
/* Private define ------------------------------------------------------------*/
/* Private macros ------------------------------------------------------------*/
/* Private variables ---------------------------------------------------------*/
/* Private functions prototype------------------------------------------------*/

/******************************************************************************/
/* Exported functions for PWR in LL layer (SW instance PWR) */
/******************************************************************************/

system_status_t mx_pwr_init(void)
{
  return SYSTEM_OK;
}

system_status_t mx_pwr_deinit(void)
{
  return SYSTEM_OK;
}

system_status_t mx_pwr_enter_low_power(void)
{
  /* Clear stop flag */
  LL_PWR_ClearFlag_STOP();

  /* Set SLEEPDEEP bit of Cortex System Control Register */
  SCB_EnableDeepSleep();

  LL_PWR_SetPowerMode(LL_PWR_STOP0_MODE);

  /* Wait for interrupt request */
  __WFI();

  /* Clear SLEEPDEEP bit of Cortex System Control Register */
  SCB_DisableDeepSleep();

  /* Execution will never reach this point */

  return SYSTEM_OK;
}

system_status_t mx_pwr_exit_low_power(void)
{
  /* This API is the runtime API generated by RCC module */
  return (mx_rcc_init());
}
